--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title >Data Structures</title>
   </head>
   <base href="/" />
-  <body >
+  <body style="background-color: #404040;">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
