adding in animated looping displayers for the Sort components

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title >Data Structures</title>
   </head>
   <base href="/" />
-  <body style="background-color: #141414; color: #E5EAF3">
+  <body style="background-color: #141414; color: #E5EAF3; margin-right:5%; margin-left: 5%;">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
