need to fix nav bar with daisyui and vuetify components

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title >Data Structures</title>
   </head>
   <base href="/" />
-  <body style="background-color: #141414; color: #E5EAF3; margin-right:5%; margin-left: 5%;  flex-direction:column; gap: 4em; height: 100vh; margin: 0 15%;">
+  <body style="background-color: #141414; ">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
