added style to index for all pages fix

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: #141414; ">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,7 +7,7 @@
     <title >Data Structures</title>
   </head>
   <base href="/" />
-  <body style="background-color: #141414; ">
+  <body style="">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
