--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-theme="business">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='80' font-size='80' font-family='Arial' fill='%234ade80'>0</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"  />
-    <title >Data Structures</title>
+    <title>IndexZero</title>
   </head>
   <base href="/" />
   <body >
