--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" data-theme="business">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='80' font-size='80' font-family='Arial' fill='%234ade80'>0</text></svg>" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"  />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50%' y='80' font-size='80' font-family='Arial' fill='%234ade80' text-anchor='middle'>0</text></svg>" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IndexZero</title>
   </head>
   <base href="/" />
-  <body >
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
-</html>
+</html></html>
